--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^7.0.1",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
-    "react-toastify": "^10.0.6",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
