--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
+    "framer-motion": "^11.15.0",
     "jwt-decode": "^4.0.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "sharp": "^0.32.6",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -31,7 +34,8 @@
     "start": "SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "source-map-explorer": "^2.5.3"
   }
 }
